Implemented elementary CRUD
Changelog

1. Created function for displaying user list.
2. Created api and method for updating user list, bounds and validation not set yet.
3. Created delete functionality, utilised html deletion + database deletion for performance.
4. Troubleshot some issues with paths, queries and changed some semantic elements.

To-do
1. Offline database switching for anime.
2. Manifest and service worker functionality.
3. Implementing cache for offline functionality when in active sessions.
4. Input validation.
5. QoL HTML
6. May add note feature to userlisting.

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Anime Tracker</title>
 </head>
 <body>
-  <div class="container">
-
+<div class="container">
     <aside class="sidebar">
-      <div id="buttonicon">>></div>
+        <div id="buttonicon">>></div>
         <ul>
             <li><a href="#page">Lorem.</a></li>
             <li><a href="#page">Lorem.</a></li>
@@ -37,16 +35,17 @@
                 </div>
             </div>
 
-            <div class="personallist">
-                <ul>
-                    <li><div>User 1</div></li>
+            <div class="personallist_container">
+                <ul id="personallist">
+                    <!-- User's personal list dynamically rendered here -->
                 </ul>
             </div>
         </div>
     </div>
 </div>
-    <button id="next">next</button>
-    <button id="before">back</button>
+
+<button id="next">Next</button>
+<button id="before">Back</button>
 <script src="/clientscripts/main.js"></script>
 </body>
 </html>
