--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,10 @@
 </head>
 <body>
 <div class="container">
-    <aside class="sidebar">
-        <div id="buttonicon">>></div>
-        <ul>
-            <li><a href="#page">Lorem.</a></li>
-            <li><a href="#page">Lorem.</a></li>
-            <li><a href="#page">Lorem.</a></li>
-        </ul>
-    </aside>
 
     <div class="main-content">
         <header class="header">
-            <div class="logo">MyLogo</div>
+            <div class="logo"><img src="/Anime_PWA/public/images/animelogo.jpg"></div>
         </header>
 
         <div class="content">
@@ -33,6 +25,12 @@
                         <!-- dynamic addition here -->
                     </ul>
                 </div>
+        <div class="buttoncontainer">
+            <button id="next">Next</button>
+            <button id="before">Back</button>
+        </div>
+
+
             </div>
 
             <div class="personallist_container">
@@ -40,12 +38,15 @@
                     <!-- User's personal list dynamically rendered here -->
                 </ul>
             </div>
+
         </div>
+
+
+
     </div>
 </div>
 
-<button id="next">Next</button>
-<button id="before">Back</button>
+
 <script src="/clientscripts/main.js"></script>
 </body>
 </html>
