--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Tracker</title>
@@ -10,7 +11,7 @@
 
     <div class="main-content">
         <header class="header">
-            <div class="logo"><img src="/Anime_PWA/public/images/animelogo.jpg"></div>
+            <div class="logo"><img src="images/animeicon.png"></div>
         </header>
 
         <div class="content">
