--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -12,7 +12,7 @@
 
     <div class="main-content">
         <header class="header">
-            <div class="logo"><img src="images/animeicon.png" alt="animeicon"></div>
+            <div class="logo"><img src="/animeicon.png" alt="animeicon"></div>
         </header>
 
         <div class="content">
@@ -56,7 +56,7 @@
 </div>
 
 
-<script src="/clientscripts/main.js"></script>
+<script src="/main.js"></script>
 </body>
 </html>
 
