Test init - ignore

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -5,7 +5,7 @@
     <link rel="manifest" href="manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anime Tracker</title>
+    <title>Anime Tracker test</title>
 </head>
 <body>
 <div class="container">
