--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -3,42 +3,38 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anime Tracker test</title>
+    <title>Anime Tracker</title>
 </head>
 <body>
 <div class="container">
-
     <div class="main-content">
         <header class="header">
             <div class="logo"><img src="/animeicon.png" alt="animeicon"></div>
+            <h1>Anime Tracker</h1>
         </header>
 
         <div class="content">
             <div class="librarycontainer">
                 <form action="search" class="search-form">
-
                     <input type="text" id="input_search" placeholder="Type your favourite anime...">
-                    <button type="submit">Search</button>
-
+                    <button type="submit"><i class="fas fa-search"></i> Search</button>
                 </form>  
 
                 <label for="input_search"></label>
                 <label for="input_search"></label>
-
 
                 <div class="animelistcontainer">
                     <ul id="animelist">
                         <!-- dynamic addition here -->
                     </ul>
                 </div>
-        <div class="buttoncontainer">
-            <button id="next">Next</button>
-            <button id="before">Back</button>
-        </div>
-
-
+                <div class="buttoncontainer">
+                    <button id="before"><i class="fas fa-chevron-left"></i> Back</button>
+                    <button id="next">Next <i class="fas fa-chevron-right"></i></button>
+                </div>
             </div>
 
             <div class="personallist_container">
@@ -47,16 +43,10 @@
                     <!-- User's personal list dynamically rendered here -->
                 </ul>
             </div>
-
         </div>
-
-
-
     </div>
 </div>
-
 
 <script src="/main.js"></script>
 </body>
 </html>
-
