--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -21,7 +21,7 @@
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" required 
                            pattern="[a-zA-Z0-9_]{3,20}" 
-                           title="Username must be 3-20 characters, letters, numbers, and underscores only">
+                           title="Username must be 3-20 characters, only letters, numbers, and underscores, no spaces">
                     <span class="error-message" id="username-error"></span>
                 </div>
 
@@ -35,32 +35,16 @@
 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <div class="password-input">
-                        <input type="password" id="password" name="password" required 
-                               minlength="8" 
-                               title="Password must be at least 8 characters long">
-                        <button type="button" class="toggle-password" onclick="togglePassword()">
-                            <span class="eye-icon">👁️</span>
-                        </button>
-                    </div>
-                    <div class="password-strength" id="password-strength">
-                        <div class="strength-bar">
-                            <div class="strength-fill" id="strength-fill"></div>
-                        </div>
-                        <span class="strength-text" id="strength-text">Password strength</span>
-                    </div>
+                    <input type="password" id="password" name="password" required 
+                           minlength="8" 
+                           title="Password must be at least 8 characters long, include uppercase, lowercase, number, and special character.">
                     <span class="error-message" id="password-error"></span>
                 </div>
 
                 <div class="form-group">
                     <label for="confirmPassword">Confirm Password</label>
-                    <div class="password-input">
-                        <input type="password" id="confirmPassword" name="confirmPassword" required 
-                               minlength="8">
-                        <button type="button" class="toggle-password" onclick="toggleConfirmPassword()">
-                            <span class="eye-icon">👁️</span>
-                        </button>
-                    </div>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required 
+                           minlength="8">
                     <span class="error-message" id="confirmPassword-error"></span>
                 </div>
 
