fixed css artifact, login/signup HTML
1. Removed a box shadow artifact that kept appearing upon login/signup reload.
2. Changed colour scheme and width of the forms

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -16,7 +16,7 @@
                 <p>Sign in to your Anime Tracker account</p>
             </div>
 
-            <form id="loginForm" class="auth-form">
+            <form id="loginForm" class="auth-form" novalidate>
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" required 
