Changed validation html

--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -44,31 +44,7 @@
                         </div>
                         <div class="strength-text" id="strength-text"></div>
                     </div>
-                    <div class="password-requirements" id="password-requirements">
-                        <h4>Password Requirements:</h4>
-                        <ul>
-                            <li id="req-length" class="requirement-item">
-                                <span class="requirement-icon">✕</span>
-                                At least 8 characters
-                            </li>
-                            <li id="req-lowercase" class="requirement-item">
-                                <span class="requirement-icon">✕</span>
-                                Lowercase letter
-                            </li>
-                            <li id="req-uppercase" class="requirement-item">
-                                <span class="requirement-icon">✕</span>
-                                Uppercase letter
-                            </li>
-                            <li id="req-number" class="requirement-item">
-                                <span class="requirement-icon">✕</span>
-                                Number
-                            </li>
-                            <li id="req-special" class="requirement-item">
-                                <span class="requirement-icon">✕</span>
-                                Special character
-                            </li>
-                        </ul>
-                    </div>
+                    <div id="password-missing" class="password-missing"></div>
                     <span class="error-message" id="password-error"></span>
                 </div>
 
