changed rate limit & icons

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Anime Tracker</title>
+    <title>Login - AniLog</title>
     <link rel="stylesheet" href="auth-style.css">
     <link rel="manifest" href="manifest.json">
 </head>
@@ -12,8 +12,8 @@
         <div class="auth-card">
             <div class="auth-header">
                 <img src="/animeicon.png" alt="Anime Tracker Logo" class="auth-logo">
-                <h1>Welcome Back</h1>
-                <p>Sign in to your Anime Tracker account</p>
+                <h1>Welcome!</h1>
+                <p>Sign in to your AniLog account</p>
             </div>
 
             <form id="loginForm" class="auth-form" novalidate>
@@ -35,7 +35,7 @@
                 <div class="form-group">
                     <button type="submit" class="auth-button" id="loginBtn">
                         <span class="button-text">Sign In</span>
-                        <span class="loading-spinner" style="display: none;">⏳</span>
+                        <span class="loading-spinner" style="display: none;">↻</span>
                     </button>
                 </div>
 
