--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - Anime Tracker</title>
+    <title>Sign Up - AniLog</title>
     <link rel="stylesheet" href="auth-style.css">
     <link rel="manifest" href="manifest.json">
 </head>
@@ -13,7 +13,7 @@
             <div class="auth-header">
                 <img src="/animeicon.png" alt="Anime Tracker Logo" class="auth-logo">
                 <h1>Create Account</h1>
-                <p>Join Anime Tracker to manage your anime list</p>
+                <p>Join AniLog to track your anime!</p>
             </div>
 
             <form id="signupForm" class="auth-form" novalidate>
@@ -58,7 +58,7 @@
                 <div class="form-group">
                     <button type="submit" class="auth-button" id="signupBtn">
                         <span class="button-text">Create Account</span>
-                        <span class="loading-spinner" style="display: none;">⏳</span>
+                        <span class="loading-spinner" style="display: none;">↻</span>
                     </button>
                 </div>
 
