improved card html

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -45,6 +45,7 @@
                 </div>
                 <div class="buttoncontainer">
                     <button id="before"><i class="fas fa-chevron-left"></i> Back</button>
+                    <span id="current-page" class="current-page-indicator">Page 1</span>
                     <button id="next">Next <i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
