Added Loading icon

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -11,6 +11,7 @@
 <body>
 <div class="container">
     <div class="main-content">
+        <div id="loading-spinner" class="loading-spinner-overlay" style="display:none"><div class="spinner"></div></div>
         <header class="header">
             <div class="header-left">
                 <div class="logo"><img src="/animeicon.png" alt="animeicon"></div>
@@ -40,6 +41,7 @@
 
                 <div class="animelistcontainer">
                     <ul id="animelist">
+                        <div id="loading-spinner" class="loading-spinner-overlay" style="display:none"><div class="spinner"></div></div>
                         <!-- dynamic addition here -->
                     </ul>
                 </div>
