--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anime Tracker</title>
+    <title>AniLog</title>
 </head>
 <body>
 <div class="container">
@@ -15,7 +15,7 @@
         <header class="header">
             <div class="header-left">
                 <div class="logo"><img src="/animeicon.png" alt="animeicon"></div>
-                <h1>Anime Tracker</h1>
+                <h1>AniLog</h1>
             </div>
             <div class="user-section">
                 <span class="username" id="username-display">Welcome!</span>
@@ -53,7 +53,7 @@
             </div>
 
             <div class="personallist_container">
-                <h1>Your List</h1>
+                <h1 id="username_list_display">Your anime list</h1>
                 <ul id="personallist">
                     <!-- User's personal list dynamically rendered here -->
                 </ul>
